Cleanup documentation > document pt2

--- a/site/faq/faq-documentation.qmd
+++ b/site/faq/faq-documentation.qmd
@@ -89,13 +89,13 @@ These features are currently on the roadmap and under research, no release sched
 
 <!-- FOOTNOTES -->
 
-[^1]: [View documentation templates](/guide/templates/view-document-templates.qmd)
+[^1]: [View document templates](/guide/templates/view-document-templates.qmd)
 
 [^2]: [Accessing {{< var vm.product >}}](/guide/configuration/accessing-validmind.qmd)
 
-[^3]: [Customize documentation templates](/guide/templates/customize-document-templates.qmd)
+[^3]: [Customize document templates](/guide/templates/customize-document-templates.qmd)
 
-[^4]: [Swap documentation templates](/guide/templates/swap-document-templates.qmd)
+[^4]: [Swap document templates](/guide/templates/swap-document-templates.qmd)
 
 [^5]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
