--- a/site/guide/templates/swap-document-templates.qmd
+++ b/site/guide/templates/swap-document-templates.qmd
@@ -62,7 +62,7 @@ Swap between different versions of your model documentation or validation report
 
 ## What's next
 
-- [Customize documentation templates](customize-document-templates.qmd)
+- [Customize document templates](customize-document-templates.qmd)
 - [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
 
@@ -86,4 +86,4 @@ Swap between different versions of your model documentation or validation report
 
 [^9]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 
-<!-- [^10]: [Customize documentation templates](customize-document-templates.qmd) -->
+<!-- [^10]: [Customize document templates](customize-document-templates.qmd) -->
