--- a/site/releases/2024/2024-dec-06/release-notes.qmd
+++ b/site/releases/2024/2024-dec-06/release-notes.qmd
@@ -791,7 +791,7 @@ Labels: bug
 :::
 
 ::: {.w-40-ns .tc}
-[Customize documentation templates](/guide/templates/customize-document-templates.qmd){.button}
+[Customize document templates](/guide/templates/customize-document-templates.qmd){.button}
 
 :::
 
