--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -169,7 +169,7 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 #### <sup>Module 2</sup><br> Customizing Your Model Inventory
 
 - Configure model inventory fields
-- Customize documentation templates
+- Customize document templates
 - Configure reusable blocks
 
 :::
