--- a/site/releases/2024/2024-feb-14/highlights.qmd
+++ b/site/releases/2024/2024-feb-14/highlights.qmd
@@ -361,7 +361,7 @@ We implemented a toggle feature in the **{{< fa wifi >}} Model Activity** and Re
 
 ::: {.w-40-ns}
 
-[Swap documentation templates](/guide/templates/swap-document-templates.qmd){.button}
+[Swap document templates](/guide/templates/swap-document-templates.qmd){.button}
 
 :::
 
