--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -286,7 +286,7 @@ Work with templates
 
 ::: {.panel-tabset}
 
-## View documentation templates
+## View document templates
 
 ::: {.f3}
 
@@ -327,7 +327,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Customize documentation templates
+Customize document templates
 
 ::: {.tc}
 [Learn more ...](/guide/templates/customize-document-templates.qmd){.button target="_blank"}
