Manage document types outline

--- a/site/guide/templates/manage-document-types.qmd
+++ b/site/guide/templates/manage-document-types.qmd
@@ -3,7 +3,7 @@ title: "Manage document types"
 date: last-modified
 ---
 
-wip
+Customize the document types available to your organization. Document types have their own configurable and reusable templates.
 
 ::: {.attn}
 
@@ -14,83 +14,15 @@ wip
 
 :::
 
-## Add text blocks
+## Add document types
 
-{{< include /guide/templates/_add-text-blocks.qmd >}}
-
-### Add existing text blocks to library
-
-To transform an existing text block into a reusable block:
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^2]
-
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring** and select the relevant section containing the text block you want to make reusable.
-
-4. Hover your mouse over the text block you want to add to your block library, and click **{{< fa plus >}} Add to Library** to enter the details for your block:
-
-    - The **[name]{.smallcaps}** of your text block
-    - (Optional) A **[description]{.smallcaps}** for your text block
-    - The templated **[content]{.smallcaps}** for your text block
-    - Whether the block **[sharing]{.smallcaps}** permissions are **Private** or **Shared**
-
-5. Click **Add Block** to save your text block.
-
-After you've added a reusable text block, you can then insert it into your model documentation, validation reports, or ongoing monitoring reports.[^3]
-
-## Duplicate text blocks
-
-{{< include /guide/templates/_duplicate-text-blocks.qmd >}}
-
-## Edit text blocks
-
-::: {.callout title="Editing a text block within the block library will not update inserted instances of that block."}
-Previously inserted instances of text blocks within model documentation, validation reports, or ongoing monitoring reports will not be updated.
-:::
-
-To modify an existing text block in your block library:
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Documents, select **Block Library**.
-
-3. To the right of the text block you want to edit, click **{{< fa ellipsis-vertical >}}** and select **Edit Details**.
-
-4. Make your desired changes to the following fields:
-
-    - The **[name]{.smallcaps}** of your text block
-    - (Optional) A **[description]{.smallcaps}** for your text block
-    - The templated **[content]{.smallcaps}** for your text block
-    - Whether the block **[sharing]{.smallcaps}** permissions are **Private** or **Shared**
-
-5. Click **Save Block** to apply your changes.
-
-## Delete text blocks
-
-::: {.callout-important title="Text block deletion is permanent."}
-While previously inserted instances of text blocks will not be affected, the text block will no longer be available for future use via the block library.
-:::
-
-To remove an existing text block from your block library:
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Documents, select **Block Library**.
-
-3. To the right of the text block you want to remove, click **{{< fa ellipsis-vertical >}}** and select **[{{< fa trash-can >}} Delete Text Block]{.red}**.
-
-4. After you confirm, the text block will be removed from your block library.
-
+## Edit or delete document types
 
 
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^3]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#add-content-blocks)
 
 
 
