Wording adjust pt1

--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -7,7 +7,7 @@ aliases:
   - /guide/templates/customize-documentation-templates.html
 ---
 
-Customize {{< var vm.product >}}'s templates for model documentation, validation reports, and ongoing monitoring reports to fit your specific case-by-case needs, such as type or complexity of model or model use case.
+Customize {{< var vm.product >}}'s default templates for model documentation, validation reports, or ongoing monitoring reports to fit your specific case-by-case needs, such as type or complexity of model or model use case.
 
   - Templates are versioned and saving a documentation template after making changes or reverting to a previous version state always creates a new version, or you can duplicate templates to create new independent templates in your library. 
   - Documentation templates are stored as YAML files edited directly using the advanced editor, allowing you full control over the minitua such as desired guidelines. 
