--- a/site/guide/templates/manage-document-types.qmd
+++ b/site/guide/templates/manage-document-types.qmd
@@ -3,7 +3,7 @@ title: "Manage document types"
 date: last-modified
 ---
 
-Customize the document types available to your organization. Document types have their own configurable and reusable templates.
+Customize the document types available to your organization, such as model documentation, validation reports, or ongoing monitoring reports. Document types have their own configurable and reusable templates.
 
 ::: {.attn}
 
