--- a/site/guide/templates/swap-document-templates.qmd
+++ b/site/guide/templates/swap-document-templates.qmd
@@ -7,10 +7,10 @@ aliases:
   - /guide/templates/swap-documentation-templates.html
 ---
 
-Swap between different versions of your model documentation or validation report templates within the {{< var validmind.platform >}}. Switch to a completely different template, or apply another version of your current template.
+Swap between different versions of your document templates within the {{< var validmind.platform >}}. Switch to a completely different template, or apply another version of your current template.
 
-- When swapping templates, only the document structure is changed. Any modifications that you might have made to content is preserved inside each content block or section. 
-- If you are not sure which template or which version of a template your model documentation or validation report is using, you can also check and compare between different templates and versions of templates.
+- When swapping templates, only the document structure is changed. Any modifications that you might have made to content is preserved inside each content block or section.
+- If you are not sure which template or which version of a template your document is using, you can also check and compare between different templates and versions of templates.
 
 ::: {.attn}
 
