--- a/site/guide/templates/view-document-templates.qmd
+++ b/site/guide/templates/view-document-templates.qmd
@@ -7,7 +7,7 @@ aliases:
   - /guide/templates/view-documentation-templates.html
 ---
 
-View the structure and configuration of existing documentation templates within the {{< var vm.platform >}}. {{< var vm.product >}} provides default templates for documentation, validation reports, and ongoing monitoring plans.  
+View the structure and configuration of existing document templates within the {{< var vm.platform >}}. {{< var vm.product >}} provides default templates for model documentation, validation reports, and ongoing monitoring reports.
 
 ::: {.attn}
 
