Add document types

--- a/site/guide/templates/manage-document-types.qmd
+++ b/site/guide/templates/manage-document-types.qmd
@@ -16,12 +16,29 @@ Customize the document types available to your organization, such as model docum
 
 ## Add document types
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Documents, select **Document Types**.
+
+3. Click **{{< fa plus >}} Add Document Type**.
+
+4. Enter in the document type details: 
+
+    - Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}**.
+    - Indicate the display **[order]{.smallcaps}** of this document type in lists and menus.
+    - Toggle whether this document type should **[auto initialize when model is created]{.smallcaps}**.
+    - Select the model stakeholder types[^2] that should have **[write permissions]{.smallcaps}** for this document type.
+
+5. Click **Create Document Type** to add your document type.
+
 ## Edit or delete document types
 
 
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^2]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
 
 
