Edited: View document templates

--- a/site/guide/templates/_view-document-templates.qmd
+++ b/site/guide/templates/_view-document-templates.qmd
@@ -3,15 +3,15 @@
 
 2. Under Documents, select **Templates**.
 
-3. Select one of the following template types from the tabs:
+3. Click the tab for the document type with the templates you want to view. For example:
 
    - **Documentation**
    - **Validation Report**
    - **Ongoing Monitoring**
 
-4. Click on one of the available templates. 
+4. Select one of the available templates.
 
-   In the page that opens, you can view information about the template, such as: 
+   On the page that opens, you can view information about the template, such as: 
 
    - Template name
    - Template type
@@ -34,12 +34,12 @@
 
 1. Under Documents, select **Templates**.
 
-1. Select one of the following template types from the tabs:
+1. Click the tab for the document type with the templates you want to view. For example:
 
    - **Documentation**
    - **Validation Report**
    - **Ongoing Monitoring**
 
-1. Click on one of the available templates.
+1. Select one of the available templates.
 
 ::::
