Fixing CSS on customize document templates page

--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -66,12 +66,11 @@ Once saved, your new template version becomes available for use.
 ::: {.column-page-inset-right}
 
 ```{=html}
-<!DOCTYPE html><html lang=en> <head><script src=https://code.jquery.com/jquery-3.4.1.min.js integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin=anonymous></script><link href=https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css rel=stylesheet integrity=sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T crossorigin=anonymous><script src=https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js integrity=sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM crossorigin=anonymous></script><link rel=stylesheet type=text/css href=/assets/css/schema_doc.css><script src=https://use.fontawesome.com/facf9fa52c.js></script><script src=/assets/css/schema_doc.min.js></script><meta charset=utf-8><title>Schema Docs</title>
+<!DOCTYPE html><html lang=en> <head><script src=https://code.jquery.com/jquery-3.4.1.min.js integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin=anonymous></script><script src=https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js integrity=sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM crossorigin=anonymous></script><link rel=stylesheet type=text/css href=/assets/css/schema_doc.css><script src=https://use.fontawesome.com/facf9fa52c.js></script><script src=/assets/css/schema_doc.min.js></script><meta charset=utf-8><title>Schema Docs</title>
 
 <!-- NR Start CSS kludge 
 The Bootstrap CSS from this HTML document hides the top navbar of our docs site and turns link colors in the text blue. This kludge works around this. 
 -->
-<link href="/site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 <link href="/styles.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 
 <style>
