Fixing CSS on customize document templates page pt2

--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -85,6 +85,30 @@ The Bootstrap CSS from this HTML document hides the top navbar of our docs site 
   background-color: #f7f7f7;
 }
 
+.card-body {
+	-ms-flex: 1 1 auto;
+	flex: 1 1 auto;
+	padding: 1.25rem
+}
+
+.pl-5,
+.px-5 {
+	padding-left: 3rem !important
+}
+
+.badge {
+	display: inline-block;
+	padding: .25em .4em;
+	font-size: 75%;
+	font-weight: 700;
+	line-height: 1;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: baseline;
+	border-radius: .25rem;
+	transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out
+}
+
 .badge-warning {
   color: #ffffff;
   background-color: #de257e;
