--- a/site/guide/templates/swap-document-templates.qmd
+++ b/site/guide/templates/swap-document-templates.qmd
@@ -27,15 +27,16 @@ Swap between different versions of your document templates within the {{< var va
 
 2. Select a model or find your model by applying a filter or searching for it.[^2]
 
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
 
-4. On your Document Overview. Validation Report Overview, or Ongoing Monitoring page, locate: 
+4. Select the document you want to view the template for:
 
-   - **[document template]{.smallcaps}** — Lists the template used for model documentation.[^3]
-   - **[validation report template]{.smallcaps}** — Lists the template used for validation reports.[^4]
-   - **[ongoing monitoring template]{.smallcaps}** — Lists the template used for ongoing monitoring plans.[^5]  
+   - Click **{{< fa magnifying-glass >}} Search** to search for a specific document by keyword.
+   - Click **{{< fa arrow-up-wide-short >}} Sort** to reorder the list of documents using different criteria.
 
-5. Click on the named version of the template, then select **{{< fa eye >}} View Template Details** to open the details for the template applied to that model.
+5. On your document's detail page, locate [document template]{.smallcaps}.
+
+6. Click on the named version of the template, then select **{{< fa eye >}} View Template Details** to open the details for the template applied to that document.
 
 ## Swap templates
 
@@ -71,6 +72,8 @@ Swap between different versions of your document templates within the {{< var va
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
 [^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+<!-- HERE -->
 
 [^3]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
