--- a/site/guide/templates/working-with-model-documents.qmd
+++ b/site/guide/templates/working-with-model-documents.qmd
@@ -2,7 +2,7 @@
 title: "Working with model documents"
 date: last-modified
 listing:
-  - id: document-templates
+  - id: model-documents
     type: grid
     grid-columns: 2
     max-description-length: 250
@@ -13,7 +13,7 @@ listing:
       - manage-model-documents.qmd
 ---
 
-{{< include /guide/templates/_document-templates.qmd >}}
+WIP
 
-:::{#document-templates}
+:::{#model-documents}
 :::
