--- a/site/guide/templates/working-with-templates.qmd
+++ b/site/guide/templates/working-with-templates.qmd
@@ -4,14 +4,15 @@ date: last-modified
 listing:
   - id: document-templates
     type: grid
-    grid-columns: 3
+    grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents:
-      - view-document-templates.qmd
+      # - view-document-templates.qmd
       - customize-document-templates.qmd
-      - swap-document-templates.qmd
+      # - swap-document-templates.qmd
+      - manage-document-templates.qmd
 aliases:
   - /guide/working-with-documentation-templates.html
   - /guide/model-documentation/working-with-documentation-templates.html
