New manage document templates page

--- a/site/guide/templates/_view-document-templates.qmd
+++ b/site/guide/templates/_view-document-templates.qmd
@@ -1,4 +1,6 @@
 :::: {.content-visible unless-format="revealjs"}
+To review the existing templates available to your organization:
+
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 2. Under Documents, select **Templates**.
