Fixing broken links pt1

--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -174,13 +174,13 @@ The documentation template editor validates the YAML changes you make and flags 
 Common issues with YAML include incorrect indenting, imbalanced quotes, or missing colons between keys and values. If you run into issues with incorrect YAML, check the error message provided by the template editor, as it might provide a line and column number where the error occurs. 
 
 ## What's next
-- [Swap document templates](swap-document-templates.qmd)
+- [Manage document templates](manage-document-templates.qmd)
 - [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
 
 <!-- FOOTNOTES -->
 
-[^1]: [View document templates](view-document-templates.qmd)
+[^1]: [Manage document templates](manage-document-templates.qmd)
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
