--- a/site/guide/templates/working-with-templates.qmd
+++ b/site/guide/templates/working-with-templates.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Working with templates"
+title: "Working with document templates"
 date: last-modified
 listing:
   - id: document-templates
@@ -9,9 +9,7 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-      # - view-document-templates.qmd
       - customize-document-templates.qmd
-      # - swap-document-templates.qmd
       - manage-document-templates.qmd
 aliases:
   - /guide/working-with-documentation-templates.html
