--- a/site/releases/2023/release-notes-2023-jul-24.qmd
+++ b/site/releases/2023/release-notes-2023-jul-24.qmd
@@ -89,7 +89,7 @@ We've now enhanced the flexibility of documenting models by allowing you to swap
 :::
 
 ::: {.w-40-ns}
-[Swap document templates](/guide/templates/swap-document-templates.qmd){.button .button-green}
+[Manage document templates](/guide/templates/manage-document-templates.qmd){.button .button-green}
 
 :::
 
