Fixing broken links pt2

--- a/site/about/overview-model-risk-management.qmd
+++ b/site/about/overview-model-risk-management.qmd
@@ -218,6 +218,6 @@ By integrating these features, {{< var vm.product >}} provides a comprehensive s
 
 [^3]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd)
 
-[^4]: [Working with templates](/guide/templates/working-with-templates.qmd)
+[^4]: [Working with document templates](/guide/templates/working-with-document-templates.qmd)
 
 [^5]: [Export documentation](/guide/reporting/export-documentation.qmd)
