--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -80,6 +80,6 @@ c. Click **Register Model** to create a new entry in the model inventory.
 
 [^4]: [Manage groups](/guide/configuration/manage-groups.qmd)
 
-[^5]: [Working with templates](/guide/templates/working-with-templates.qmd)
+[^5]: [Working with document templates](/guide/templates/working-with-document-templates.qmd)
 
 [^6]: [Vendor model](/about/glossary/glossary.qmd#vendor-model)
