--- a/site/releases/2024/2024-dec-06/release-notes.qmd
+++ b/site/releases/2024/2024-dec-06/release-notes.qmd
@@ -941,7 +941,7 @@ We've expanded our reference guides on working with documentation templates, inc
 :::
 
 ::: {.w-40-ns .tc}
-[Working with templates](/guide/templates/working-with-templates.qmd){.button}
+[Working with document templates](/guide/templates/working-with-document-templates.qmd){.button}
 
 :::
 
