--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -131,7 +131,7 @@ Now that you've grasped the basics of using {{< var vm.product >}} for model dev
 
 [^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^3]: [Working with templates](/guide/templates/working-with-templates.qmd)
+[^3]: [Working with document templates](/guide/templates/working-with-document-templates.qmd)
 
 [^4]: [Assign documentation section statuses](/guide/model-documentation/assign-documentation-section-statuses.qmd)
 
