--- a/site/guide/templates/working-with-document-templates.qmd
+++ b/site/guide/templates/working-with-document-templates.qmd
@@ -15,6 +15,7 @@ aliases:
   - /guide/working-with-documentation-templates.html
   - /guide/model-documentation/working-with-documentation-templates.html
   - /guide/templates/working-with-documentation-templates.html
+  - /guide/templates/working-with-templates.html
 ---
 
 {{< include /guide/templates/_document-templates.qmd >}}
