Added tiles to guides

--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -3,7 +3,7 @@ title: "Manage model documents"
 date: last-modified
 ---
 
-WIP
+Add or delete the document types on individual models in your inventory.
 
 ::: {.attn}
 
@@ -17,14 +17,13 @@ WIP
 ## Add model documents
 
 
-## Edit or delete documents
+## Delete documents
 
 
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^2]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
 
 
