--- a/site/guide/templates/working-with-model-documents.qmd
+++ b/site/guide/templates/working-with-model-documents.qmd
@@ -11,9 +11,24 @@ listing:
     contents:
       - manage-document-types.qmd
       - manage-model-documents.qmd
+  - id: documents-on-models
+    type: grid
+    grid-columns: 3
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents:
+      - ../model-documentation/working-with-model-documentation.qmd
+      - ../model-validation/preparing-validation-reports.qmd
+      - ../monitoring/ongoing-monitoring.qmd
 ---
 
-WIP
+Set up document types for use on models across your organization. By default, {{< var vm.product >}} provides document types and out-of-the-box templates for model documentation, validation reports, and ongoing monitoring reports.
 
 :::{#model-documents}
+:::
+
+Learn more about how to work with model documentation, validation reports, and ongoing monitoring reports within the {{< var validmind.platform >}}:
+
+:::{#documents-on-models}
 :::
