--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -55,6 +55,15 @@ listing:
     max-description-length: 250
     sort: false
     contents: 
+    - templates/working-with-model-documents.qmd
+    - templates/working-with-document-templates.qmd
+    - templates/manage-text-block-library.qmd
+    fields: [title, description]
+  - id: guides-docs-templates
+    type: grid
+    max-description-length: 250
+    sort: false
+    contents: 
     - templates/working-with-document-templates.qmd
     - templates/manage-text-block-library.qmd
     fields: [title, description]
@@ -136,7 +145,12 @@ Onboard your organization, teams or business units, and users onto the {{< var v
 :::{#guides-configuration}
 :::
 
-Customize your personal user experience within the {{< var validmind.platform >}}:
+Then, customize your model document types, templates, and reusable blocks:
+
+:::{#guides-templates}
+:::
+
+Further customize your personal user experience within the {{< var validmind.platform >}}:
 
 :::{#guides-customize}
 :::
@@ -159,7 +173,7 @@ Use the {{< var validmind.platform >}} model inventory to thoroughly track your 
 
 First, customize your model documentation templates and reusable blocks:
 
-:::{#guides-templates}
+:::{#guides-docs-templates}
 :::
 
 Then, document and test your models in your own model development environment with the {{< var validmind.developer >}}:
