Model documentation > editing

--- a/site/guide/model-documentation/_add-content-blocks.qmd
+++ b/site/guide/model-documentation/_add-content-blocks.qmd
@@ -2,7 +2,7 @@
 
 1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-1. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document type file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
 1. Click on a section header to expand that section and add content.
 
