--- a/site/guide/model-documentation/assign-documentation-section-statuses.qmd
+++ b/site/guide/model-documentation/assign-documentation-section-statuses.qmd
@@ -23,7 +23,7 @@ Assign a completion status to individual sections of your model documentation th
 
 2. Select a model or find your model by applying a filter or searching for it.[^3]
 
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation file.[^4]
 
    Jump to any section of the model documentation by selecting the relevant section you would like to view.
 
@@ -31,7 +31,7 @@ Assign a completion status to individual sections of your model documentation th
     - [**In Progress**]{.bubble}
     - [**Done**]{.bubble}
 
-The documentation completion status summary will then be updated on your Document Overview[^4] page.
+The documentation completion status summary will then be updated on your Document Overview[^5] page.
 
 ## What's next
 - [View model activity](/guide/model-inventory/view-model-activity.qmd)
@@ -47,4 +47,6 @@ The documentation completion status summary will then be updated on your Documen
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^4]: [Working with model documentation](working-with-model-documentation.qmd#document-overview)
+[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+
+[^5]: [Working with model documentation](working-with-model-documentation.qmd#document-overview)
