--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -64,7 +64,7 @@ Use {{< var vm.product >}} to assist you with generating content via AI!^[[Gener
       - **Test-Driven**[^6] — Adds a new section with logged test results.
       - **Metric Over Time**[^7] — Adds a new section with logged metric over time results.
 
-7. After adding the block to your documentation, click on the text to make changes or add comments.[^8]
+7. After adding the block to your document, click on the text to make changes or add comments.[^8]
 
 ### Add mathematical formulas
 
@@ -97,7 +97,7 @@ While editing a simple text block, you can have {{< var vm.product >}} assist yo
 
 {{< include content_blocks/_generate-with-ai.qmd >}}
 
-When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^10] just like other updates to your documentation, reports, or plans. 
+When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^10] just like other updates to your documentation, reports, or plans.
 
 ## Remove content blocks
 
@@ -109,7 +109,7 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 2. Select a model or find your model by applying a filter or searching for it.[^11]
 
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document type file.[^12]
 
 4. Click on a section header to expand that section and remove content.
 
@@ -150,3 +150,5 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 [^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
 [^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^12]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
