Editing: Check for compliance

--- a/site/guide/model-documentation/check-documents-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documents-for-compliance.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Check your documents for compliance"
+title: "Check documentation for compliance"
 date: last-modified
 listing:
   - id: check-documents-whats-next
@@ -11,6 +11,8 @@ listing:
     contents: 
     - ../../about/overview-llm-features.qmd
     - ../../guide/model-documentation/submit-for-approval.qmd
+aliases: 
+  - /guide/model-documentation/check-documents-for-compliance.html
 ---
 
 Use the {{< var validmind.checker >}} to analyze your completed documentation by comparing it against regulatory standards. 
@@ -54,18 +56,17 @@ Supported regulations include:
 - [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
 :::
 
-## Access the {{< var validmind.checker >}}
+## Check model documentation
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select the model you'd like to check.[^3]
+2. Select a model or find your model by applying a filter or searching for it.[^3]
 
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**[^4].
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document type file.[^4].
 
-4. On the documentation page, click **{{< fa check >}} Check Document** on the right.
+4. Locate the Document Check box on the right and click **{{< fa check >}} Check Document**.
 
-
-## Check your documentation
+### Select a regulation
 
 1. In the **{{< var validmind.checker >}}**, click **Select a regulation** and pick which one to check your document against:
 
@@ -77,8 +78,7 @@ Supported regulations include:
 
 The system analyzes your documentation, identifies gaps, and generates recommendations for specific questions that you can review in the next step.
 
-
-## Review the findings
+### Review the findings
 
 1. After the {{< var validmind.checker >}} has completed its analysis, expand individual questions or click **Expand All** to look through the findings.
 
@@ -103,4 +103,4 @@ Use the feedback provided by the {{< var validmind.checker >}} to review the app
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^4]: [Working with model documentation](working-with-model-documentation.qmd#document-overview)
+[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
