--- a/site/guide/model-documentation/working-with-model-documentation.qmd
+++ b/site/guide/model-documentation/working-with-model-documentation.qmd
@@ -2,7 +2,7 @@
 title: "Working with model documentation"
 date: last-modified
 listing:
-  - id: model-documentation-listing
+  - id: draft-documentation
     type: grid
     max-description-length: 250
     sort: false
@@ -11,8 +11,15 @@ listing:
       - view-documentation-guidelines.qmd
       - work-with-content-blocks.qmd
       - work-with-test-results.qmd
+  - id: complete-documentation
+    type: grid
+    max-description-length: 250
+    grid-columns: 2
+    sort: false
+    fields: [title, description]
+    contents:
       - assign-documentation-section-statuses.qmd
-      - check-documents-for-compliance.qmd
+      - check-documentation-for-compliance.qmd
       - collaborate-with-others.qmd
       - submit-for-approval.qmd
 aliases:
@@ -95,7 +102,14 @@ This section describes how to work with model documentation in the {{< var valid
 
 ## What's next
 
-:::{#model-documentation-listing}
+Draft, edit, and refine your model documentation, complete with supporting test results:
+
+:::{#draft-documentation}
+:::
+
+Wrap up your model documentation, collaborate with other stakeholders, and submit your work for approval:
+
+:::{#complete-documentation}
 :::
 
 
