Validation report edits

--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -69,14 +69,14 @@ Use the {{< var validmind.platform >}} to prepare detailed validation reports in
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report file.[^6]
 
-   You can now jump to any section of the validation report by expanding the table of contents on the left and selecting the relevant section you would like to view.
+    Jump to any section of the validation report by expanding the table of contents on the left and selecting the relevant section you would like to view.
 
-4. You can now add any **Risk Assessment Notes**, as well as assess compliance[^6] for each section of your validation report:
+4. Add **Risk Assessment Notes**, as well as assess compliance[^7] for each section of your validation report:
 
-    - Validation guidelines are displayed under the header of each section of your report to help ensure that you are compliant with your organization's requirements.[^7]
-    - Whenever you make a change, a log of the action is recorded under **{{< fa wifi >}} Model Activity**.[^8]
+    - Validation guidelines are displayed under the header of each section of your report to help ensure that you are compliant with your organization's requirements.[^8]
+    - Whenever you make a change, a log of the action is recorded under **{{< fa wifi >}} Model Activity**.[^9]
 
 5. For any **Risk Assessment Notes**, save your edits to retain your changes:
 
@@ -84,7 +84,7 @@ Use the {{< var validmind.platform >}} to prepare detailed validation reports in
    - Select **Save current revision** and enter a name.
    - Click {{< fa check >}} to save the revision.
 
-   You can also suggest changes and leave comments.[^9]
+   You can also suggest changes and leave comments.[^10]
 
    ::: {.callout}
    Compliance assessments and linking evidence and findings are both saved automatically after selection.
@@ -108,11 +108,13 @@ Use the {{< var validmind.platform >}} to prepare detailed validation reports in
 
 [^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^6]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
+[^6]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^7]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
+[^7]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
 
-[^8]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+[^8]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
 
-[^9]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
+[^9]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+
+[^10]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
 
