--- a/site/guide/model-validation/_link-developer-evidence.qmd
+++ b/site/guide/model-validation/_link-developer-evidence.qmd
@@ -5,9 +5,9 @@ To link evidence logged by developers^[[{{< var validmind.developer >}}](/develo
 
 1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-1. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**. 
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
-   You can now expand any subsection of the validation report you would like to work with.
+   Expand any subsection of the validation report you would like to work with.
 
    For example, locate 2. Validation then select **2.1.1. Assumptions**.
 
@@ -32,13 +32,13 @@ To link evidence logged by developers to your validation report:
 
 1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
-1. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**. 
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a [Validation Report file](/guide/templates/working-with-model-documents.qmd).
 
-   You can now expand any subsection of the validation report you would like to work with.
+   Expand any subsection of the validation report you would like to work with.
 
    For example, locate 2. Validation then select **2.1.1. Assumptions**.
 
-1. In any section of the report where the button is available, click **{{< fa link >}} Link  Developer Evidence**. 
+1. In any section of the report where the button is available, click **{{< fa link >}} Link Developer Evidence**. 
 
    ![Validation report section 2.1.1. that shows a compliance assessment with the option to link to developer evidence](/guide/model-validation/link-developer-evidence.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to evidence" .screenshot}
 
