--- a/site/guide/model-validation/_link-findings-to-reports.qmd
+++ b/site/guide/model-validation/_link-findings-to-reports.qmd
@@ -3,9 +3,9 @@
 
 1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-1. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**. 
+In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
-   You can now expand any subsection of the validation report you would like to work with.
+   Expand any subsection of the validation report you would like to work with.
 
    For example, locate 2. Validation then select **2.1.1. Assumptions**.
 
@@ -24,9 +24,9 @@
 :::: {.content-hidden unless-format="revealjs"}
 1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
-1. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**. 
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a [Validation Report file](/guide/templates/working-with-model-documents.qmd).
 
-   You can now expand any subsection of the validation report you would like to work with.
+   Expand any subsection of the validation report you would like to work with.
 
    For example, locate 2. Validation then select **2.1.1. Assumptions**.
 
