Model findings edits

--- a/site/guide/model-validation/_add-finding-via-overview.qmd
+++ b/site/guide/model-validation/_add-finding-via-overview.qmd
@@ -2,7 +2,7 @@
 :::: {.content-visible unless-format="revealjs"}
 To log a finding from the documentation overview: 
 
-a. On your model's **{{< fa book-open >}} Documentation** page, click **{{< fa plus >}} Add Model Finding**.
+a. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
 a. On the Add Model Finding modal that opens, provide information for: 
 
@@ -23,7 +23,7 @@ a. When you are done, click **Save** to submit the finding.
 :::: {.content-hidden unless-format="revealjs"}
 To log a finding from the documentation overview: 
 
-a. On your model's **{{< fa book-open >}} Documentation** page, click **{{< fa plus >}} Add Model Finding**.
+a. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
 a. On the Add Model Finding modal that opens, provide information for: 
 
