--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -2,7 +2,7 @@
 title: "Preparing validation reports"
 date: last-modified
 listing:
-  - id: validation-reports-listing
+  - id: draft-reports
     type: grid
     max-description-length: 250
     sort: false
@@ -11,6 +11,13 @@ listing:
       - review-model-documentation.qmd
       - assess-compliance.qmd
       - ../model-documentation/work-with-content-blocks.qmd
+  - id: complete-reports
+    type: grid
+    grid-columns: 2
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents:
       - ../model-documentation/collaborate-with-others.qmd
       - ../model-documentation/submit-for-approval.qmd
 aliases:
@@ -92,7 +99,14 @@ Use the {{< var validmind.platform >}} to prepare detailed validation reports in
 
 ## What's next
 
-:::{#validation-reports-listing}
+Complete your validation report by reviewing submitted model documentation and assessing compliance:
+
+:::{#draft-reports}
+:::
+
+Collaborate with other stakeholders and submit your work for approval:
+
+:::{#complete-reports}
 :::
 
 
