--- a/site/guide/monitoring/review-monitoring-results.qmd
+++ b/site/guide/monitoring/review-monitoring-results.qmd
@@ -33,16 +33,16 @@ For results to be present and available for review, ongoing monitoring must be e
 
 2. Select a model or find your model by applying a filter or searching for it.[^3]
 
-3. In the left sidebar, click **{{< fa desktop >}} Ongoing Monitoring**. 
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Monitoring file.[^4]
    
-    - You can now explore the different sections of the template and review the results. 
+    - Explore the different sections of the template and review the results.
     - Any deviations from the expected performance should be identified and acted on if necessary.
 
     For example, click **3.1 Target Drift** under 2. Data Quality & Drift Assessment and scroll down:
 
 ## Examples
 
-### [{{< fa check >}} Satisfactory]{.bubble .green-bg}
+#### [{{< fa check >}} Satisfactory]{.bubble .green-bg}
 
 :::: {.flex .flex-wrap .justify-around .w-100}
 
@@ -69,7 +69,7 @@ All values are within the threshold of 5% (`drift_pct_threshold = 5`), and so al
  
 ::::
 
-### [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg}
+#### [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg}
 
 :::: {.flex .flex-wrap .justify-around .w-100}
 
@@ -100,7 +100,6 @@ The final assessment is that the model requires attention:
 ::::
 
 
-
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
@@ -108,4 +107,6 @@ The final assessment is that the model requires attention:
 [^2]: [Enable monitoring](enable-monitoring.qmd)
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
