--- a/site/guide/monitoring/set-thresholds-and-alerts.qmd
+++ b/site/guide/monitoring/set-thresholds-and-alerts.qmd
@@ -67,7 +67,7 @@ In this example:
 
 These examples visualize GINI scores which are commonly used to evaluate classification performance, particularly in credit risk and binary classification problems.
 
-### [{{< fa check >}} Satisfactory]{.bubble .green-bg}
+#### [{{< fa check >}} Satisfactory]{.bubble .green-bg}
 
 :::: {.flex .flex-wrap .justify-around .w-100}
 
@@ -81,7 +81,7 @@ Here, the GINI score fluctuates over time but stays above the medium risk thresh
  
 ::::
 
-### [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg}
+#### [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg}
 
 :::: {.flex .flex-wrap .justify-around .w-100}
 
